--- a/themes/legacy-team/layouts/default.htm
+++ b/themes/legacy-team/layouts/default.htm
@@ -30,7 +30,7 @@ security = "all"
     </section>
 
     <!-- Footer -->
-    <footer id="layout-footer">
+    <footer id="layout-footer" style="    padding-top: 40px;">
         {% partial "site/footer" %}
     </footer>
 
