--- a/themes/legacy-team/partials/site/header.htm
+++ b/themes/legacy-team/partials/site/header.htm
@@ -1,15 +1,15 @@
 <div class="wrapper header ">
-    <a class="header__logo" href="/">
-        <img src="{{ 'assets/img/logo.svg'|theme }}" alt="" />
+    <a class="header__logo" href="https://dev-level.ru/">
+        <img src="{{ 'assets/img/logo3.svg'|theme }}" alt="" />
     </a>
 
     <div class="header__panel fs-14">
-        <a href="">Календарь мероприятий</a>
-        <a href="">Региональные преставительства</a>
-        <a href="">Новости</a>
+        <a target="_blank" href="https://dev-level.ru/#calendar">Календарь мероприятий</a>
+        <a target="_blank" href="https://dev-level.ru/regions">Региональные преставительства</a>
+        <a target="_blank" href="https://dev-level.ru/news">Новости</a>
         <a class="" href="/account/login">
             <img src="{{ 'assets/img/enter.svg '|theme }}" alt="">
-            <p>Войти</p>
+            <p>Кабинет</p>
         </a>
     </div>
 
