--- a/plugins/legacyteam/fspinfo/components/createeventcomponent/default.htm
+++ b/plugins/legacyteam/fspinfo/components/createeventcomponent/default.htm
@@ -1,26 +1,52 @@
-<form id="event-create-form" data-request-flash data-request="onCreateEvent" enctype="multipart/form-data" method="POST"
-    class="d-flex gap-3 flex-column" data-request-success="resetForm();">
+<form id="event-create-form" data-request-flash data-request="onCreateEvent" method="POST" class="custom-form"
+    data-request-success="" data-request-files>
+    <input type="hidden" name="message" value="false" />
+
+    <!-- Блок для загрузки фото -->
+    <div class="editor-view collapse show banner-image">
+        <img src="{{'assets/img/download-photo.jpg '|theme }}" alt="Баннер региона" class="banner-preview" />
+        <input name="photo" type="file" accept=".jpg,.jpeg,.bmp,.png,.webp,.gif" class="form-control banner-input"
+            style="display: none;" />
+    </div>
+    нажмите чтобы добавить картинку мероприятия
+    <style>
+        .editor-view {
+            width: 200px;
+            height: 200px;
+            border-radius: 8px;
+            overflow: hidden;
+            cursor: pointer;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    </style>
     <input class="form-control" type="text" placeholder="Название мероприятия" required name="name">
     <textarea class="form-control" placeholder="Описание мероприятия" required name="description"></textarea>
-    <textarea class="form-control" placeholder="Краткое описание" name="short-description"></textarea>
     <input class="form-control daterange" type="text" name="daterange" placeholder="Период присутствия" value="" />
+    <input class="form-control" type="number" placeholder="Количество участников" required name="participants"
+        id="participants">
 
-
-    <input class="form-control" type="text" placeholder="Адрес" name="address" id="address">
     <div class="form-check">
         <label class="form-check-label" for="online-event">Онлайн мероприятие</label>
         <input class="form-check-input" type="checkbox" name="is_online" id="online-event">
+        <input class="form-control mt-8" type="text" placeholder="Адрес" name="address" id="address">
     </div>
-    <label for="file">Файл положения</label>
-    <select name="priority" id="">
-        <option value="">Укажите приоритет</option>
+    <select name="priority" id="" class="form-control" required>
+        <option value="">Укажите тип соревнования</option>
         <option value="0">Не указан</option>
         <option value="1">Муниципальный (городской)</option>
         <option value="2">Региональный</option>
         <option value="3">Федеральный</option>
         <option value="4">Всероссийский</option>
     </select>
-    <input name="position-files" id="file" type="file" class="form-control" accept=".pdf" />
+    <div>
+        <label for="file">Файл положения</label>
+        <input name="position-files" id="file" type="file" class="form-control mt-8" />
+    </div>
     <button class="btn btn-primary" data-attach-loading>Отправить мероприятие</button>
 </form>
 
@@ -28,6 +54,34 @@
 <script src="https://cdn.jsdelivr.net/npm/moment/min/moment.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const bannerInput = document.querySelector('.banner-input');
+        const bannerPreview = document.querySelector('.banner-preview');
+        const form = document.querySelector('.banner-editor');
+
+        // Клик на баннер
+        bannerPreview.addEventListener('click', () => {
+            bannerInput.click();
+        });
+
+        // Предпросмотр баннера и автоматическая отправка формы
+        bannerInput.addEventListener('change', function (event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    bannerPreview.src = e.target.result;
+                };
+                reader.readAsDataURL(file);
+
+                // Автоматическая отправка формы
+                // form.submit();
+            }
+        });
+    });
+</script>
 
 <script>
     function resetForm() {
