--- a/plugins/rainlab/user/components/registration/default.htm
+++ b/plugins/rainlab/user/components/registration/default.htm
@@ -1,4 +1,4 @@
-<form method="post" data-request="onRegister" data-request-flash>
+<form method="post" data-request="onRegister" data-request-flash class="custom-form">
     <input type="hidden" name="redirect" value="true" />
 
     {% if __SELF__.canRegister %}
@@ -6,28 +6,35 @@
         <h1 class="h2">Создать новый аккаунт</h1>
     </div>
 
+    <select name="region_id" id="" class="form-control">
+        <option value="">Выберите регион</option>
+        {% for region, key in allRegions %}
+        <option value="{{key}}">{{region}}</option>
+        {% endfor %}
+    </select>
+
     <div class="form-floating my-3">
         <input name="first_name" type="text" class="form-control" id="inputFirstName" placeholder="Имя"
             autocomplete="given-name" />
-        <label for="inputFirstName">Имя</label>
+        <!-- <label for="inputFirstName">Имя</label> -->
     </div>
 
     <div class="form-floating my-3">
         <input name="last_name" type="text" class="form-control" id="inputLastName" placeholder="Фамилия"
             autocomplete="family-name" />
-        <label for="inputLastName">Фамилия</label>
+        <!-- <label for="inputLastName">Фамилия</label> -->
     </div>
 
     <div class="form-floating my-3">
         <input name="email" type="email" class="form-control" id="inputEmail" placeholder="Email"
             autocomplete="email" />
-        <label for="inputEmail">Email</label>
+        <!-- <label for="inputEmail">Email</label> -->
     </div>
 
     <div class="form-floating my-3">
         <input name="password" type="password" class="form-control" id="inputPassword" placeholder="Пароль"
             autocomplete="new-password" />
-        <label for="inputPassword">Пароль</label>
+        <!-- <label for="inputPassword">Пароль</label> -->
     </div>
 
     <button class="btn btn-primary btn-lg w-100 py-2" data-attach-loading type="submit">
