--- a/themes/legacy-team/assets/scss/footer.scss
+++ b/themes/legacy-team/assets/scss/footer.scss
@@ -3,9 +3,12 @@
   background-color: #ffffff;
   display: flex;
   //   padding: 60px 340px !important;
+  overflow: hidden;
+  border-radius: 24px;
+  padding: 24px 24px;
 
   justify-content: space-between;
-  padding: 60px 0;
+  // padding: 60px 0;
 
   &__licence {
     display: flex;
@@ -41,6 +44,12 @@
 
   &__contacts {
     color: #3f3f55;
+  }
+
+  &__block-contacts {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
   }
 
   @media (max-width: 768px) {
