--- a/themes/legacy-team/assets/scss/styles.scss
+++ b/themes/legacy-team/assets/scss/styles.scss
@@ -7,15 +7,17 @@
 @import "map";
 @import "calendar";
 @import "profile";
+@import "event";
+@import "edit-region";
 
 :root {
-  --display: 1440px;
+  --display: 1216px;
   --display-full: 1920px;
   --padding-inline: 1.25rem;
 }
 
 @mixin screen($min-width) {
-  @media (min-width: $min-width) {
+  @media (max-width: $min-width) {
     @content; // Вставляет содержимое, переданное в миксин
   }
 }
@@ -26,7 +28,8 @@
 }
 
 html {
-  background-color: #fff;
+  // background-color: #fff;
+  background: #F6F6F6;
 }
 
 main {
@@ -71,5 +74,125 @@ body {
     width: fit-content;
 
     transition: 0.3s;
+  }
+}
+
+.analitics--main {
+  display: flex;
+  margin-top: 40px;
+  align-items: center;
+  flex-direction: column;
+
+  &__flex {
+    display: inline-flex;
+    gap: 2rem;
+    justify-content: space-evenly;
+    height: 400px;
+    width: 100%;
+
+    canvas {
+      @include screen(768px) {
+        width: calc(50% - 1rem) !important;
+      }
+    }
+  }
+}
+
+.profile-region__item-footer {
+  a {
+    white-space: wrap;
+  }
+}
+
+.profile__account-info-fields,
+.profile__account-btns {
+  @include screen(768px) {
+    flex-direction: column;
+  }
+}
+
+.profile-region__item {
+  @include screen(768px) {
+    position: static;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+
+    .profile-region__banner {
+      img {
+        width: 100%;
+        height: 100%;
+        object-position: center center;
+      }
+    }
+
+    >div {
+      position: static;
+    }
+
+    .profile-region__item-footer {
+      padding: 2rem;
+    }
+  }
+}
+
+.profile__field {
+  @include screen(768px) {
+    max-width: 100%;
+  }
+}
+
+.tabs-control__list.tabs {
+  @include screen(1050px) {
+    button {
+      flex-grow: 1;
+    }
+  }
+}
+
+.sended-events__date {
+  text-wrap: nowrap;
+
+}
+
+.sended-events__list {
+  display: grid;
+
+  .sended-events__item {
+    grid-column: span 6;
+    grid-template-columns: subgrid;
+    gap: 1.25rem;
+    display: grid;
+
+    @include screen(1110px) {
+      grid-column: span 3;
+    }
+
+    @include screen(768px) {
+      grid-column: span 1;
+    }
+
+    .sended-events__item-info:last-of-type {
+      display: grid;
+      grid-template-columns: subgrid;
+      grid-column: span 2;
+    }
+  }
+}
+
+#myForm {
+  @include screen(768px) {
+    flex-direction: column;
+  }
+}
+
+.verify {
+  @include screen(576px) {
+    flex-direction: column;
+
+    .verify-status {
+      order: -1;
+    }
   }
 }
