--- a/themes/legacy-team/partials/site/footer.htm
+++ b/themes/legacy-team/partials/site/footer.htm
@@ -1,6 +1,6 @@
 <div class="footer wrapper">
     <div class="footer__licence">
-        <img src="assets/img/logo.svg" alt="">
+        <img src="{{ 'assets/img/logo3.svg'|theme }}" alt="">
         <p class="fs-14">© 2024 Все права защищены.</p>
         <a href="/" style="text-decoration: underline;" class="fs-12">Пользовательское соглашение</a>
         <a href="/" class="fs-12">Политика обработки персональных данных</a>
