--- a/themes/legacy-team/partials/site/meta.htm
+++ b/themes/legacy-team/partials/site/meta.htm
@@ -21,6 +21,7 @@
 ]|theme }}" rel="stylesheet" />
 {% styles %}
 
+
 <!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -33,3 +34,7 @@
     'assets/js/app.js'
 ]|theme }}"></script>
 {% scripts %}
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.dirtyforms/2.0.0/jquery.dirtyforms.min.js"></script>
+<link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/jquery.dirtyforms/2.0.0/jquery.dirtyforms.min.css" />
